// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen gvpCustomers config import-export] should create the gvpCustomers: the gvpCustomers have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ gvpcustomer [cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen gvpCustomers config import-export] should skip the same gvpCustomers: the gvpCustomers have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= gvpcustomer [cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen gvpCustomers config import-export] should throw exception when new gvpCustomers to import miss mandatory properties gvpCustomers: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - gvpcustomer [emptyCfgObjectTest]:
    - channel
    - isAdminCustomer
    - isProvisioned
    - reseller
    - tenant
",
  "stdout": "",
}
`;

exports[`[mutagen gvpCustomers config import-export] should throw exception when updating gvpCustomers with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - gvpcustomer [cfgObjectTest]:
    - reseller
    - tenant
",
  "stdout": "",
}
`;

exports[`[mutagen gvpCustomers config import-export] should update the modified gvpCustomers: the modified gvpCustomers have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ gvpcustomer [cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
